FIX: Legend fully visible, with no overlap when verticle scroll bar present

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -116,14 +116,14 @@ main > section {
 }
 
 #searchBox {
-  width: 140px;   /* or whatever size you want */
+  width: 120px;   /* or whatever size you want */
 }
 
 #searchBox,
 #sort {
   display: inline-block;
   vertical-align: middle;
-  margin: 8px 0.5rem 1rem;
+  margin: 8px 0.2rem 1rem;
   border-radius: 10px;
   padding: 10px;
   font-size: 1em;
@@ -152,7 +152,7 @@ footer {
 
 #newBtn {
   margin-top: 8px !important;
-    padding: 8px 12px !important;
+    padding: 8px 10px !important;
 }
 
 /* NEW BUTTON + THEME BUTTON */
@@ -244,7 +244,7 @@ header {
   position: absolute;
   top: 100%;            /* directly below the button */
 left: 50%;
-transform: translateX(-50%);
+transform: translateX(-55%);
   margin-top: 6px;      /* small gap */
   background: var(--card-bg);
   color: var(--text);
